--- a/package.json
+++ b/package.json
@@ -11,7 +11,5 @@
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   },
-  "dependencies": {
-    "feather-icons": "^4.29.0"
-  }
+  "dependencies": {}
 }
